# python_vs_rust

./: README.md
python/: lambda.py
rust/: Cargo.toml
rust/src/: main.rs
