[package]
name = "cur-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.91"
log = "0.4.17"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# NOTE: the following crate is not part of the SDK, but it is maintained by AWS.
lambda_runtime = "0.7.2"
aws-config = "0.52.0"
aws-sdk-organizations = "0.22.0"
aws-sdk-costexplorer = "0.22.0"
aws-sdk-sns = "0.22.0"
#aws-sdk-s3 = "0.22.0"
chrono = "0.4.23"
date-calculations = "0.1.1"